# purge-old-branches

./: .gitignore  README.md  TODO.md  pyproject.toml
src/: __init__.py  cleaner_logic.py  cli.py  csv_parser.py  git_wrapper.py  hello.py
src/purge_old_branches/: cleaner_logic.py  cli.py  csv_parser.py  git_wrapper.py
tests/: test_cleaner_logic.py  test_cli.py  test_csv_parser.py  test_git_wrapper.py  test_hello.py  test_integration.py
