[project]
name = "purge-old-branches"
version = "0.0.1"
description = "A project to purge old branches"
dependencies = []

[project.scripts]
purge-old-branches = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
