[project]
name = "purge-old-branches"
version = "0.0.1"
description = "A project to purge old branches"
dependencies = []
requires-python = ">=3.10"
authors = [{ name = "Kristof Neirynck" }]

[project.scripts]
purge-old-branches = "purge_old_branches.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.7",
    "build==1.4.0",
    "pyright==1.1.404",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/purge_old_branches"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
